# axum-rusty

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  audit.toml  docker-app.env  docker-compose.yaml  local.env  security-agent.config.yml
.cargo/: audit.toml
.claude/: settings.json  test-style.md
.claude/commands/: bench.md  check.md
.claude/rules/: coding-style.md  rust-coding-style.md  rust-security-style.md  rust-test-style.md  security-rust.md  security-style.md  security.md  test-style.md  test.md
.claude/skills/address-review/: SKILL.md
.claude/skills/address-review-rust/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/code-review-feedback/: SKILL.md
.claude/skills/code-review-feedback-rust/: SKILL.md
.claude/skills/code-review-rust/: CODE_REVIEW_RUST.md  SKILL.md
.claude/skills/prompt-tunning/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/refactor-rust/: REFACTOR_RUST.md  SKILL.md
.claude/skills/reply-review/: SKILL.md
.claude/skills/reply-review-rust/: SKILL.md
.claude/skills/skill-tunning/: SKILL.md
.claude/skills/test-align/: SKILL.md
.claude/skills/test-rust/: SKILL.md  TEST_RUST.md
.github/: pull_request_template.md
.github/workflows/: claude-code-review.yml  claude-review.yml  claude.yml  pr-ci.yml  pr-classify.yml
.serena/: project.yml
common/: Cargo.toml
common/src/auth/: mod.rs  webs.rs
common/src/config/: config.rs  log4rs.yaml  mod.rs
controller/: Cargo.toml
controller/src/context/: api_doc.rs  api_request.rs  api_response.rs  api_version.rs  auth_resolver.rs  errors.rs  mod.rs  webs.rs
controller/src/model/: mod.rs  status.rs  todo.rs  user.rs
controller/src/module/: mod.rs  todo_module.rs  usecase_module.rs  user_module.rs
controller/src/routes/: health_check.rs  todo.rs  user.rs
controller/src/startup/: mod.rs
controller/tests/: api_test.rs
controller/tests/common/: mod.rs
database/: Dockerfile
database/sql/: check.sql  sample.sql
domain/: Cargo.toml
domain/src/: lib.rs  transaction.rs
domain/src/model/: mod.rs  todo.rs  user.rs
domain/src/model/todo/: status.rs
domain/src/repository/: todo.rs  user.rs
domain/src/repository/todo/: status.rs
infra/: Cargo.toml
infra/src/: db.rs  lib.rs  modules.rs
infra/src/config/: config.rs
infra/src/model/: todo.rs  user.rs
infra/src/model/todo/: status.rs
infra/src/module/: mod.rs  repo_module.rs  uow.rs
infra/src/persistence/: config.rs  mod.rs  postgres.rs
infra/src/repository/: health_check.rs  mod.rs  todo.rs  user.rs
infra/src/repository/health_check/: health_check.rs  interface.rs  mod.rs
infra/src/repository/todo/: interface.rs  mod.rs  status.rs  todo.rs
infra/src/repository/user/: interface.rs  user.rs
infra/tests/: todo_repository_test.rs  todo_status_repository_test.rs  user_repository_test.rs
infra/tests/common/: container.rs  db.rs  fixtures.rs  mod.rs  module.rs
migrations/: 20230930091117_up.sql  20230930121341_make_data_index.sql
runn-e2e/runbooks/: test.yml
todo-controller/: Cargo.toml
todo-controller/src/context/: api_request.rs  api_response.rs  errors.rs  mod.rs
todo-controller/src/model/: todo.rs  user.rs
todo-controller/src/model/todo/: status.rs
todo-controller/src/module/: mod.rs
todo-controller/src/routes/: mod.rs  todo.rs  user.rs
todo-controller/src/startup/: mod.rs
todo-domain/: Cargo.toml
todo-domain/src/model/: mod.rs  user.rs
todo-domain/src/repository/: user.rs
todo-infra/: Cargo.toml
todo-infra/src/: modules.rs
todo-infra/src/model/: todo.rs  user.rs
todo-infra/src/model/todo/: status.rs
todo-infra/src/persistence/: postgres.rs
todo-infra/src/repository/: todo.rs  user.rs
todo-infra/src/repository/todo/: status.rs
todo-usecase/: Cargo.toml
todo-usecase/src/model/: todo.rs  user.rs
todo-usecase/src/model/todo/: status.rs
todo-usecase/src/usecase/: health_check.rs  todo.rs  user.rs
usecase/: Cargo.toml
usecase/src/: lib.rs
usecase/src/model/: mod.rs  todo.rs  user.rs
usecase/src/model/todo/: status.rs
usecase/src/module/: mod.rs  repos.rs  uow.rs
usecase/src/usecase/: health_check.rs  todo.rs  user.rs
usecase/src/usecase/health_check/: health_check.rs  interface.rs  mod.rs
usecase/src/usecase/todo/: interface.rs  mod.rs  todo.rs
usecase/src/usecase/user/: interface.rs  mod.rs  user.rs
usecase/tests/: todo_usecase_happy_path_test.rs  todo_usecase_integration_test.rs  user_usecase_integration_test.rs
usecase/tests/common/: container.rs  db.rs  mod.rs  module.rs
