[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usecase = { path = "../usecase" }
infra = { path = "../infra" }
common = { path = "../common" }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres"] }
anyhow = "1.0.86"
shaku = "0.6"
axum = "0.7.9"
axum-extra = { version = "0.7.7", features = ["cookie"] }
dotenvy = "0.15"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.44", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tower-cookies = "0.10.0"
thiserror = "1.0.61"
validator = { version = "0.19", features = ["derive"] }
serde_json = "1.0.133"
utoipa = { version = "5.2.0", features = ["axum_extras", "openapi_extensions", "time"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
fancy-regex = "0.13.0"
chrono = "0.4.38"
jsonwebtoken = "9.2.0"
http = "1.1.0"
time = "0.3.47"
once_cell = "1.20.2"
log = "0.4.22"
log4rs = "1.3.0"