[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
common = { path = "../common" }
anyhow = "1.0.86"
async-trait = "0.1.80"
chrono = "0.4.38"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
log = "0.4.22"