[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
usecase = { path = "../usecase" }
common = { path = "../common" }
anyhow = "1.0.86"
async-trait = "0.1.80"
chrono = "0.4.38"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "migrate"] }
tokio = { version = "1.44", features = ["sync"] }
log = "0.4.22"

[dev-dependencies]
tokio = { version = "1.44", features = ["full"] }
