[package]
name = "todo-usecase"
version = "0.1.0"
edition = "2021"

[dependencies]
todo-domain = { path = "../todo-domain" }
todo-infra = { path = "../todo-infra" }
anyhow = "1.0.86"
chrono = "0.4.38"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
tracing = "0.1.41"
bcrypt = "0.15.1"
